# cubic_spline

./: .gitignore  0.main.js  1.main.js  2.main.js  Cargo.toml  README.md  build_web.js  index.html  index.js  main.js  webpack.config.js
build_web_tpls/: index.d.ts  index.js
publish_web/: run.sh  update_package_json.js
publish_web/tpl/: index.d.ts  index.js
src/: calc.rs  convert.rs  from_raw.rs  from_tuples.rs  lib.rs  move.rs  opts.rs  points.rs  points_iter.rs  result.rs  test.rs  tfti.rs  wasm.rs
src/impls/: impl_flatten_f64.rs  impl_tuple_f64.rs  mod.rs
src/tests/: data_flatten.rs  data_tuples.rs  mod.rs
src/v1/: calc.rs  err.rs  hlp.rs  mod.rs  points.rs  points_iter.rs  tfti.rs
www/: index.ts  package.json  tsconfig.json  webpack.config.js
www/src/: App.tsx  Point.ts  Spline.ts  glob.ts  index.scss  index.tsx  spline.js  spline.ts
www/src/comps/: Input.tsx  Point.tsx  Points.tsx  Settings.tsx
