[package]
name = "cubic_spline"
version = "0.9.9"
authors = ["mz <emgyrz@gmail.com>"]
edition = "2018"
description = "Function that calculates curve points for cubic spline"
license = "MIT"
homepage = "https://github.com/emgyrz/cubic_spline"
repository = "https://github.com/emgyrz/cubic_spline.git"
keywords = ["cubic", "spline", "curve", "graph", "interpolation"]
categories = [ "graphics"]

readme = "README.md"

[dependencies]

#[cfg(target_arch = "wasm32")]
wasm-bindgen = "0.2.68"

[lib]

#[cfg(target_arch = "wasm32")]
crate-type = ["cdylib", "rlib"]


[package.metadata.wasm-pack.profile.release]
wasm-opt = false